[package]
name = "latl-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "latl-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"]}
rand = "0.8.5"
time-macro = { path = "time-macro", features = ["profiling"] }
nix = { version = "0.29.0", features = ["time"] }
